[project]
name = "pyjsonparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Ionut-Alexandru Prodan",email = "prodanalexandru1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pyjson", from = "src"}]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
